--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://${DBHOSTNAME}:3306/${DBSCHEMA}
-spring.datasource.username=${DBUSERNAME}
-spring.datasource.password=${DBPASSWORD}
+spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-04.cleardb.net:3306/heroku_b7e8a008dc13098
+spring.datasource.username=b4a9688ea84ca9
+spring.datasource.password=9cb4e230
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
