--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-04.cleardb.net:3306/heroku_b7e8a008dc13098
-spring.datasource.username=b4a9688ea84ca9
-spring.datasource.password=9cb4e230
-spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-04.cleardb.net:3306/heroku_b7e8a008dc13098
+# spring.datasource.username=b4a9688ea84ca9
+# spring.datasource.password=9cb4e230
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+# spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/wineme
+spring.datasource.username=root
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/local_schema_webdev
-#spring.datasource.username=root
-#spring.datasource.password=password
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
